Add readme, more tests and javadoc